*** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***

* SNAPSHOT Jan 24, 2016
  * Qt/OpenGL: Draw even not ready to GL3.0, fallback to GL2.0 (with/without shaders).
  * Qt/OpenGL: Display screen even with VirtualBox and Host of linux , excepts Ubuntu 14.04 LTS.
               GL libraries for Ubuntu 14.04 LTS seem to be weird (excepts AMD/nVidia's proprietary GLs).
  * FM7: Fix around clock setting.
  * FM7: Fix crash sometimes on initializing.
  * Sound: Fix crash with some VMs.
  * Sound: Fix choppy sound.
  * Sound: Fix not effected sound-latency settings.
  * Built with commit f6248ec7dfa76e776eddcb0e685fbf6b7ff58b65 .

-- Jan 24, 2016 13:44:50 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
	
* SNAPSHOT Jan 19, 2016-1
  * Merge upstream 2016-01-10.
  * Qt/OpenGL: Reduce GPU usage a lot. Save energy.
  * Qt/OpenGL: You should use OpenGL >= v3.0 .
  * Use printer: MZ1P17 to any VMs.
  * FM8 : implemented. But not test enough.
  * FM7: Fix incorrectness reset sequence around of keyboard when resetting.
  * FM7: Adjust draw timing.
  * FM-8/7/NEW7 : Removable kanji rom.
  * FM7: Some of Fixes.
  * Qt/OpenGL: Re-enable 4:3 CRT mode.
  * Built with commit eced83faa808f2fde47a24365ebe4a6656aa40fb .

-- Jan 19, 2016 14:50:50 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT Jan 07, 2016-3
  * Hotfix for 2016-01-07 and 2016-01-07-2.
  * SOUND: Fix broken WAV data of recording sound.
  * Built with commit 8708a53b6627eba226d1bce0ba89bf792d884c98 .

-- Jan 08, 2016 12:19:19 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
	
* SNAPSHOT Jan 07, 2016 -2
  * Fix crash of a lot of VMs.
  * Built with commit e0b53fc1bd4af3a232ccc878671bab2caf7743f8 .

-- Jan 07, 2016 23:08:35 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT Dec 22, 2015
  * MERGE upstream 2015-12-17, support new APIs .
  * Change APIs to upstream's OSD class , apply to Qt.
  * Mostly built for Win32.
  * FM-7/NEW7: Fix a lot of bugs.