@@ -1,6 +1,6 @@
 ** Qt porting and FM-7/77/AV/AV40/EX for Common Source Code Project **
 
-                                                          Jan 24, 2016
+                                                          Feb 25, 2016
                             K.Ohta  (whatisthis.sowhat _at_ gmail.com)
 
 1.About
@@ -11,15 +11,15 @@ and Built with Visual Studio 2015 + DirectX9 + Direct Input 8 for Win32.
 Additional INFO:
 GNU/Linux with AMD64 binaries and Win32 with MINGW binaries are avaiable, packed with 7zip'ed format:
 
-  http://www1.axfc.net/u/3606903
+
   or
-  https://www.sendspace.com/file/wn4pdr
 
 
- MD5SUM: fad775870a6312a10c19adc89b446781
- SHA256SUM: 4f6e599d5d48b6a50e113e499e838cd68342573734b7530811c611f6ab91e016
+
+ MD5SUM: 
+ SHA256SUM: 
  Source Code:
-    https://github.com/Artanejp/common_source_project-fm7/releases/tag/SNAPSHOT_20160124
+    https://github.com/Artanejp/common_source_project-fm7/releases/tag/SNAPSHOT_20160225
 
 2.Background
 Common Source Code Project (CSP) is good emulator writing.
@@ -83,6 +83,16 @@ http://homepage3.nifty.com/takeda-toshiya/
 
 Changes:
  *** If you want to know full changes, please read 000_gitlog.txt . ***
+* SNAPSHOT Feb 25, 2016
+  * Merge UPSTREAM 2016-02-21.
+  * Support NEW APIs.
+  * Qt: Add dialogs: Key definition and Joystick Definition.
+  * FM7: Add support printers; Dumb printer and Dempa Shimbun-sha's Joystick.
+  * FM7: A lot of changes.
+  * Qt: A lot of changes.
+  * Built with commit f59a7c8a03b357a16d4b33e5a5e5fef2591cdfc2 or later .
+
+-- Feb 25, 2016 06:53:28 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
 
 * SNAPSHOT Jan 24, 2016
   * Qt/OpenGL: Draw even not ready to GL3.0, fallback to GL2.0 (with/without shaders).
@@ -142,6 +152,110 @@ Changes:
 
 Upstream changes:
 -----
+2/21/2016
+
+[VM/MB8877] fix timing to start read/write sector for invalid format track
+[VM/T3444A] fix timing to start read/write sector for invalid format track
+
+[MZ2500/CMT] fix reset signal again for Laydock
+
+
+2/19/2016
+
+[ALL] add VC++2013 project files
+[ALL] change many public method names according to common naming convention
+
+[COMMON] add create_string() function
+[WINMAIN] copy codes to read clipboard for auto key from osd class
+[EMU] copy codes for auto key and joystick mapping from osd class
+[EMU/OSD] remove codes for auto key and joystick mapping
+
+[VM/PRNFILE] fix not to register ack event in initialize() for debug build
+[VM/MZ1P17] fix not to register ack event in initialize() for debug build
+[VM/MZ1P17] fix font rom loader for MZ-80B/2000/2200
+
+[MZ2200/MEMORY80B] fix green monitor color
+
+
+2/17/2016
+
+[EMU] improve screen stretch modes
+[EMU/OSD] improve screen stretch modes
+
+[VM/FMGEN] support to set left/right volumes
+[VM/YM2151] support to set left/right volumes
+[VM/YM2203] support to set left/right volumes
+[VM/Z80DMA] fix timing of bus request and release
+
+[MZ2200/MEMORY80B] fix green monitor not to refer text/back color registers
+[MZ2200/MEMORY80B] support to swap left/right side of color and green monitors
+
+
+2/13/2016
+
+[VM/DISK] fix routine to calculate sector position for invalid format track
+[VM/DISK] increase max sector number from 256 to 512
+[VM/MB8877] improve timing to start read/write sector for invalid format track
+[VM/MZ1P17] fix initial value of reset signal
+[VM/PRNFILE] fix initial value of reset signal
+[VM/T3444A] improve timing to start read/write sector for invalid format track
+
+[MZ2200/MEMORY80B] support dual (color and green) monitors
+
+
+2/11/2016
+
+[VM/DISK] fix to allow fdc class to get gap3 size
+[VM/MB8877] improve timing to start read/write sector
+[VM/T3444A] improve timing to start read/write sector
+[VM/T3444A] fix to wait 100usec for tnd signal after sector is finshed
+
+
+2/10/2016
+
+[COMMON] improve routine to apply volume to sound samples
+[WINMAIN] improve volume dialog
+[WINMAIN] change volume uppder limit from +20dB to 0dB
+[WINMAIN] support joystick dialog
+[WINMAIN] simplify codes
+[EMU] remove function to get sound device info
+[EMU] change keyboard/joystick/mapper data pointer to const pointer
+
+[MZ80K/KEYBOARD] fix for constant keyboatd data pointer
+[PC6001/PSUB] fix for constant keyboatd data pointer
+[X1/KEYBOARD] fix for constant keyboatd data pointer
+
+
+2/7/2016
+
+[WINMAIN] add dialog to set sound device volumes
+[EMU] support to get sound device info
+[EMU] support to set left/right volumes
+
+[VM/BEEP] support to set left/right volumes
+[VM/DATAREC] support to set left/right volumes
+[VM/DEVICE] add virtual function to set left/right volumes
+[VM/LD700] support to set left/right volumes
+[VM/PCM1BIT] support to set left/right volumes
+[VM/SN76489AN] support to set left/right volumes
+[VM/TMS3631] support to set left/right volumes
+[VM/UPD7552] support to set left/right volumes
+[VM/YM2151] support to set volume
+[VM/YM2203] support to set volume
+[VM/YM2413] support to set left/right volumes
+[VM/YM2413] fix memory leak issue
+
+[BMJR/MEMORY] support to set left/right volumes
+[FAMILYBASIC/APU] support to set left/right volumes
+[MULTI8] support beep sound
+[PV1000/PSG] support to set left/right volumes
+[SCV/SOUND] support to set left/right volumes
+
+
+2/4/2016
+
+[VM/TMS9995] support debugger
+
 1/10/2015
 
 [VM/MZ1P17] support ESC % 2 in MZ-1 mode
