@@ -19,7 +19,7 @@ To Do (今後やろうと思うこと) 2016-01-24 K.Ohta
 *出来た>[Qt] Windowsビルドも、Qtでやる。可能なら、M$VCを排除する。
 [VM][DISK] トラックのギャップとかにデータ書いてるディスクのイメージ化基準の策定
 [Qt] ソケット周りを真面目に実装する（MZ-2500とか、今ひとつソケット≒TCP/IPを実装する意味がわかってない）
-[VM] VMの外側から音量設定ができる構造を、全ての音声デバイスに実装する
+*出来たっぽい,THX!武田さん>[VM] VMの外側から音量設定ができる構造を、全ての音声デバイスに実装する
 できたかなーできないかなー(´・ω・｀)>[VM][Qt] リセットした場合に固まることがあるのの解決
 *できた>[VM][FM7] マッピー等で、一定のタイミングで音楽が鳴らなくなることの修正
 [FM7] 漢字プリンタの実装（ったって、資料ないな(；´Д｀)）
