@@ -8,9 +8,9 @@
 <body>
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=-1>
-Upstream Version: 2016-01-10<BR>
-SNAPSHOT 2016-01-24<BR>
-Build Version: f6248ec7dfa76e776eddcb0e685fbf6b7ff58b65</FONT></DIV>
+Upstream Version: 2016-02-21<BR>
+SNAPSHOT 2016-02-25-1<BR>
+Build Version: f59a7c8a03b357a16d4b33e5a5e5fef2591cdfc2</FONT></DIV>
 <BR>
 <h2>Upstream Author:</h2>
 2006,2015 ©TAKEDA Toshiya<BR>
@@ -55,5 +55,5 @@ See also:<BR>
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Thu 19 Jan, 2016 14:51:50<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Thu 25 Feb, 2016 07:00:00<!-- hhmts end -->
 </body> </html>
